docs: document Raspberry Pi support — 64-bit OS required, arm32 not possible
Raspberry Pi 3B (Cortex-A53) and 4B (Cortex-A72) are fully supported
when running a 64-bit OS (Raspberry Pi OS 64-bit or Ubuntu arm64).
The existing arm64 build (aarch64-unknown-linux-gnu, glibc >= 2.17)
is compatible with both models out of the box.

32-bit OS (armhf/armv7l) cannot be supported: Java 22+ (required for
Panama FFM / JEP 454) has no arm32 builds from any major vendor
(Temurin, Zulu, GraalVM), and GraalVM native-image does not support
arm32 either.

Changes:
- install.sh: detect armv7l/armv6l/armhf and print a clear error with
  the root cause and links to 64-bit OS images for Raspberry Pi
- docs/INSTALL.md: add Raspberry Pi support table, explain arm32
  limitation, and show the 3-step setup for Pi 3B/4B with 64-bit OS

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>